# ExcPhCoupl

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt  setup.py
src/: input_parser.py  logmod.py  read_input_data.py  read_io.py  run.py
src/common/: constants.py  func.py  param.py
utils/: get_qlist.py  get_qlist_yambo.py
