[project]
name = "ExcPhCoupl"
version = "0.0.1"
authors = [
  { name="Chunhao Guo", email="cguo58@wisc.edu" },
  { name="Jacopo Simoni", email="jsimoni@wisc.edu" },
]
description = "Python package for the calculation of exciton-phonon coupling"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

[project.urls]
