[project]
name = "pyExcPhCoupl"
version = "0.0.1"
authors = [
  { name="Chunhao Guo", email="cguo58@wisc.edu" },
  { name="Jacopo Simoni", email="jsimoni@wisc.edu" },
]
description = "Python package for the calculation of exciton-phonon coupling"
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["numpy",
                "pyyaml",
                "colorlog",
                "matplotlib",
                "netCDF4"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = {file = "LICENSE.md"}

[project.scripts]
excph = "src.run:main"
[project.urls]
Homepage = "https://github.com/Ping-Group-UCSC/ExcPhCoupl/"
